# TDS_Projects

./: .gitignore  README.md  api_handler.py  app.py  deployment_checklist.md  file_summary.md  github_manager.py  llm_generator.py  main.py  main_readme.md  project_structure.py  prompts_code_revision.py  pyproject.toml  pyproject_Claude_toml.txt  quick_start.md  setup_guide.md  test_request.json
